--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/_EditWorkstationLayout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/_EditWorkstationLayout.cshtml
@@ -2,36 +2,36 @@
 @using DH.Helpdesk.Web.Infrastructure
 @model BaseEditWorkstationModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = Model.IsForDialog ? "~/Views/Shared/_PopupLayout.cshtml" : "~/Views/Shared/_Layout.cshtml";
 }
 
 @RenderSection("Scripts", false)
 
-<div class="secnavs fixed">
+<div class="secnavs fixed" style="@(Model.IsForDialog ? "top: 0" : "")">
     <div class="pull-left">
         @RenderSection("Actions", false)
     </div>
 </div>
-<div class="content">
+<div class="content" style="@(Model.IsForDialog ? "margin-top: 50px" : "")">
     <div class="container">
         <ul class="nav nav-tabs nav-tabs-actions">
             <li class="@GetIsActive(WorkstationEditTabs.Workstation)">
-                @Html.ActionLink(Translation.Get("Arbetsstation"), "Edit", "Workstation", new {id = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Arbetsstation"), "Edit", "Workstation", new {id = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId}, new {})
             </li>
             <li class="@GetIsActive(WorkstationEditTabs.Storage)">
-                @Html.ActionLink(Translation.Get("Lagring"), "Storage", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Lagring"), "Storage", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId }, new {})
             </li>
             <li class="@GetIsActive(WorkstationEditTabs.Programs)">
-                @Html.ActionLink(Translation.Get("Program"), "Software", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Program"), "Software", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId }, new {})
             </li>
             <li class="@GetIsActive(WorkstationEditTabs.Hotfix)">
-                @Html.ActionLink(Translation.Get("Hotfix"), "HotFixes", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Hotfix"), "HotFixes", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId }, new {})
             </li>
             <li class="@GetIsActive(WorkstationEditTabs.Log)">
-                @Html.ActionLink(Translation.Get("Logg"), "ComputerLogs", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Logg"), "ComputerLogs", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId }, new {})
             </li>
             <li class="@GetIsActive(WorkstationEditTabs.Accessories)">
-                @Html.ActionLink(Translation.Get("Tillbehör"), "Accessories", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog}, new {})
+                @Html.ActionLink(Translation.Get("Tillbehör"), "Accessories", "Workstation", new {computerId = Model.Id, dialog = Model.IsForDialog, userId = Model.UserId }, new {})
             </li>
         </ul>
         <div class="tab-content overflow-visible">
@@ -41,17 +41,6 @@
         </div>
     </div>
 </div>
-
-@if (Model.IsForDialog)
-{
-    <script type="text/javascript">
-        $(function() {
-                $("div.navbar.fixed").css({"display": "none"});
-                $("div.secnavs.fixed").css({"top": "0"});
-                $("div.content").css({"margin-top": "50px"});
-        });
-    </script>
-}
 
 @functions    {
     private MvcHtmlString GetIsActive(WorkstationEditTabs tab)
