--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -127,7 +127,9 @@
             getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax")',
             getDepartmentUsersUrl: '@Url.Action("GetDepartmentUsers", "Ajax")',
             relatedCasesUrl: '@Url.Action("RelatedCasesFull", "Cases")',
+            relatedInventoryUrl: '@Url.Action("RelatedInventoryFull", "Inventory/Workstation")',
             relatedCasesCountUrl: '@Url.Action("RelatedCasesCount", "Cases")',
+            relatedInventoryCountUrl: '@Url.Action("RelatedInventoryCount", "Cases")',
             getDepartmentOusUrl: '@Url.Action("ChangeDepartment", "Cases")',
             deleteCaseFileConfirmMessage: '@Translation.GetForJS("Är du säker på att du vill ta bort bifogad fil")' + '?',
             okText: '@Translation.GetForJS("OK")',
