--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/LogGrid.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/LogGrid.cshtml
@@ -4,6 +4,7 @@
 @{    
     var userPermission = false;
     var isForDialog = false;
+    string userId = null;
     if (ViewData.Keys.Contains("InventoryAdminPermission"))
     {
         userPermission = (bool)ViewData["InventoryAdminPermission"];
@@ -11,6 +12,10 @@
     if (ViewData.Keys.Contains("IsForDialog"))
     {
         isForDialog = (bool)ViewData["IsForDialog"];
+    }
+    if (ViewData.Keys.Contains("UserId"))
+    {
+        userId = (string)ViewData["UserId"];
     }
  }
 <table id="tblCases" class="table table-striped table-bordered table-hover">
@@ -39,7 +44,7 @@
                 <td>
                     @if (userPermission)
                     {
-                        @Html.ActionLink(Translation.Get("Ta bort"), "DeleteComputerLog", new { logId = item.Id, computerId = item.ComputerId, dialog = isForDialog }, new { @class = "btn" })
+                        @Html.ActionLink(Translation.Get("Ta bort"), "DeleteComputerLog", new { logId = item.Id, computerId = item.ComputerId, dialog = isForDialog, userId }, new { @class = "btn" })
                     }
                 </td>
             </tr>
