--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/ComputerLogs.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/ComputerLogs.cshtml
@@ -10,11 +10,13 @@
     {
         @Html.EditorFor(x => Model.ComputerLogModel)
         @Html.HiddenFor(m => m.ComputerLogModel.IsForDialog)
+        @Html.HiddenFor(m => m.ComputerLogModel.UserId)
         <input type="submit" value="@Translation.GetCoreTextTranslation("Lägg till")" class="btn"/>
     }
 }
 @{ var extraData = new ViewDataDictionary();
     extraData.Add(new KeyValuePair<string,object>("InventoryAdminPermission", Model.UserHasInventoryAdminPermission));
     extraData.Add(new KeyValuePair<string, object>("IsForDialog", Model.IsForDialog));
+    extraData.Add(new KeyValuePair<string, object>("UserId", Model.UserId));
  }
 @Html.Partial("LogGrid", Model.ComputerLogs, extraData)
