--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -20,9 +20,13 @@
                 </li>
             }
         }
-        @if (!Model.IsForDialog)
+        @if (Model.IsForDialog && !string.IsNullOrEmpty(Model.UserId))
         {
-            <li id="menu2">@Html.ActionLink(Translation.Get("Avbryt"), "Index", null, new {@class = "btn"})</li>
+            <li id="menu2">@Html.ActionLink(Translation.GetCoreTextTranslation("Avbryt"), "RelatedInventoryFull", new {userId = Model.UserId}, new {@class = "btn"})</li>
+        }
+        @if(!Model.IsForDialog)
+        {
+            <li id="menu2">@Html.ActionLink(Translation.GetCoreTextTranslation("Avbryt"), "Index", null, new {@class = "btn"})</li>
         }
     </ul>
 }
@@ -30,6 +34,7 @@
 @using (Html.BeginForm("Edit", "Workstation", FormMethod.Post, new { id = "workstation_edit_form" }))
 {
     @Html.HiddenFor(m => m.ComputerViewModel.IsForDialog)
+    @Html.HiddenFor(m => m.ComputerViewModel.UserId)
     @Html.HiddenFor(m => m.ComputerViewModel.Id)
     @Html.EditorFor(m => m.ComputerViewModel.WorkstationFieldsViewModel)
     @Html.EditorFor(m => m.ComputerViewModel.ChassisFieldsModel)
