--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -328,19 +328,16 @@
     <ul class="nav nav-tabs" id="tabsArea">
         <li id="extendedcase-tab-@extendedFormId" class="active">
             <a href="#fragment-1">
-                @Model.ExtendedCaseDataModel.FormModel.Name
+                @Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name, Enums.TranslationSource.TextTranslation)
                 <i id="exTabIndicator_@extendedFormId" class="tab-indicator" style="display:none;">&nbsp;</i>
             </a>
         </li>
         @if (ViewBag.AttachmentPlacement == 1 && Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()) && (Model.CaseId == 0 || (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null)))
             {
-          
             <li>
                 <a href="#attachment-tab">@Translation.Get("Attachments", Enums.TranslationSource.TextTranslation) <span id="nrOfAttachedFiles">@(Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0 ? "(" + Model.CaseDataModel.CaseFiles.Count.ToString() + ")":"")</span></a>
             </li>
-
             }
-            
     </ul>
     <div class="content tab-content">
         <div id="fragment-1" class="tab-pane active">
